:construction: add: the photo receiver
